syntax = "proto3";

package proto;

option go_package = "github.com/DenisKhanov/PrivateKeeperV2/internal/proto/credentials";

message PostCredentialsRequest {
    string login = 1;
    string password = 2;
    string metadata = 3;
}

message PostCredentialsResponse {
    string id = 1;
    string login = 2;
    string password = 3;
    string metadata = 4;
    string created_at = 5;
}

message GetCredentialsRequest {
    string id = 1;
}

message Credentials {
    string id = 1;
    string owner_id = 2;
    string login = 3;
    string password = 4;
    string metadata = 5;
    string created_at = 6;
}

message GetCredentialsResponse {
    Credentials credentials_data = 1;
}

message GetAllCredentialsInfoRequest {
}

message CredentialsInfo {
    string id = 1;
    string data_type =2;
    string metadata = 3;
    string created_at = 4;
}

message GetAllCredentialsInfoResponse {
    repeated CredentialsInfo creds = 1;
}

service CredentialsService {
    rpc PostSaveCredentials (PostCredentialsRequest) returns (PostCredentialsResponse);
    rpc GetLoadCredentials (GetCredentialsRequest) returns (GetCredentialsResponse);
    rpc GetLoadAllCredentialsDataInfo (GetAllCredentialsInfoRequest) returns (GetAllCredentialsInfoResponse);
}